--- a/qingcheng_parent/qingcheng_web_manager/src/main/webapp/goods/brand.html
+++ b/qingcheng_parent/qingcheng_web_manager/src/main/webapp/goods/brand.html
@@ -22,7 +22,7 @@
             <el-button type="primary" @click="fethData()">查询</el-button>
         </el-form-item>
         <el-form-item>
-            <el-button type="primary" @click="FormVisible=true">新增</el-button>
+            <el-button type="primary" @click="imageUrl='', FormVisible=true">新增</el-button>
         </el-form-item>
     </el-form>
     <!--数据展示-->
@@ -77,7 +77,9 @@
 
     <!--弹出表单-->
     <el-dialog title="编辑" :visible.sync="FormVisible">
-        <el-form :model="form">
+        <el-form
+            style="width: 180px;"
+        >
             <el-form-item label="品牌名称">
                 <el-input placeholder="品牌名称" v-model="pojo.name"></el-input>
             </el-form-item>
@@ -87,7 +89,7 @@
             <el-form-item label="图片">
                 <el-upload
                         class="avatar-uploader"
-                        action="https://jsonplaceholder.typicode.com/posts/"
+                        action="/upload/native.do"
                         :show-file-list="false"
                         :on-success="handleAvatarSuccess"
                         :before-upload="beforeAvatarUpload">
@@ -118,7 +120,8 @@
                 currentPage: 1, //当前页
                 searchMap: {},
                 FormVisible: false,
-                pojo: {}
+                pojo: {},
+                imageUrl:''
             }
         },
         created() {
@@ -132,6 +135,7 @@
                 })
             },
             save() {
+                this.pojo.image=this.imageUrl;
                 axios.post(`/brand/${this.pojo.id == null ? 'add' : 'update'}.do`, this.pojo).then(Response => {
                     this.fethData();
                     this.FormVisible = false;
@@ -141,6 +145,7 @@
                 this.FormVisible = true;
                 axios.get(`/brand/findById.do?id=${id}`).then(Response => {
                     this.pojo = Response.data;
+                    this.imageUrl=this.pojo.image;
                 })
             },
             dele(id) {
@@ -157,6 +162,21 @@
                         }
                     })
                 })
+            },
+            handleAvatarSuccess(res,file){
+                this.imageUrl=file.response;
+            },
+            beforeAvatarUpload(file){
+                const isJPG = file.type==='image/jpeg';
+                const isLt2M=file.size /1024 /1024 <2;
+
+                if(!isJPG){
+                    this.$message.error('上传头像只能是JPG格式');
+                }
+                if(!isLt2M){
+                    this.$message.error('上传的头像图片大小不能超过2MB');
+                }
+                return isJPG && isLt2M;
             }
         }
     });
